# ward

aia/: .gitignore  README.md  pyproject.toml
aia/docs/: index.md
aia/src/aia/: __init__.py  __main__.py
aia/tests/: __init__.py  test_main.py
